# kaggle-s6-e7

./: .gitignore  LEADERBOARD.md  README.md  main.py  pyproject.toml
configs/: catboost_v2_core.yaml  catboost_v2_core_alt.yaml  e014_e015_experiments.yaml  e016_experiment.yaml  e017_experiment.yaml  e018_experiments.yaml  e019_e020_experiments.yaml  e021_e023_ensembles.yaml  experiments.yaml  lgbm_base.yaml  postprocess_experiments.yaml  sweeps.yaml  xgb_v2_core.yaml  xgb_v2_core_alt.yaml
docs/: e009-e013-postprocess-pipeline-results.md  e014-e015-micro-blend-experiments.md  e016-e002-rare-class-micro-multiplier-results.md  e017-selective-margin-correction-results.md  e018-e002-heavy-micro-blend-results.md  e019-e023-diversity-pipeline.md  eda_findings.md  experiment-execution-guide.md  experiment-runbook.md  experiments-detailed-explanation.md  final-experiment-report.md
experiments/: README.md
notebooks/: 01_basic_eda.ipynb  02_missing_analysis.ipynb  03_distribution_shift.ipynb  04_outlier_analysis.ipynb  05_feature_engineering_candidates.ipynb  06_best_e002_tuned_kaggle.ipynb  07_catboost_v2_core_kaggle.ipynb
plan/: architecture-experiment-framework-1.md  data-fold-feature-cache-1.md  feature-e019-e023-diversity-pipeline-1.md  feature-experiment-pipelines-1.md  process-validation-runbook-1.md
reports/: eda_findings.md
scripts/: README.md  assess_diversity_fallback.py  check.py  compare_experiments.py  dry_run_pipeline.sh  dry_run_postprocess_experiments.sh  experiment_runner.sh  generate_experiment_report.py  generate_postprocess_experiments.py  make_submission.py  prepare_v2_core.py  run_e014_e015_experiments.sh  run_e016_experiment.sh  run_e017_experiment.sh  run_e018_experiments.sh  run_e019_e023_pipeline.sh  run_e021_e023_ensembles.py  run_experiment.py  run_postprocess_experiments.sh  run_sweep.py  select_diversity_sources.py  (+2 more)
(+38 files in other folders)
