[project]
name = "kaggle-s6-e7"
version = "0.1.0"
description = "EDA and preprocessing decision workspace for Kaggle Playground Series S6E7"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "mypy>=2.1.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "ruff>=0.15.20",
    "scipy>=1.14",
    "seaborn>=0.13",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_s6_e7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["pandas", "scipy", "scipy.*"]
ignore_missing_imports = true
