[project]
name = "kaggle-s6-e7"
version = "0.1.0"
description = "EDA and preprocessing decision workspace for Kaggle Playground Series S6E7"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8,<2",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "lightgbm>=4.6,<5",
    "matplotlib>=3.9",
    "mypy>=2.1.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=19",
    "pyyaml>=6",
    "ruff>=0.15.20",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "seaborn>=0.13",
    "tqdm>=4.68.3",
    "xgboost>=3.0,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "types-tqdm>=4.68.0.20260608",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_s6_e7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["pandas", "scipy", "scipy.*", "sklearn", "sklearn.*", "joblib", "xgboost", "catboost", "catboost.*"]
ignore_missing_imports = true
